<resources>
    <string name="app_name">Stack</string>

    <!-- Login Dialog -->
    <string name="login_title">請先登入會員</string>
    <string name="login_description">登入會員後即可使用個人功能。</string>
    <string name="login_facebook_text">Facebook 登入</string>
    <string name="login_native_text">會員帳號登入</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_name">用戶名稱</string>
    <string name="email_cannot_be_empty">Email 不可為空。</string>
    <string name="password_cannot_be_empty">Password 不可為空。</string>
    <string name="home">健身</string>
    <string name="position">動作監測</string>
    <string name="find_bro">找健友</string>
    <string name="user">用戶資料</string>
    <string name="login">登入</string>
    <string name="chatroom">聊天</string>
    <string name="plan">健身計畫</string>
    <string name="your_weight">What\'s your weight?</string>
    <string name="your_height">What\'s your height?</string>
    <string name="next">next</string>
    <string name="what_is_your_biological_sex">What is your biological sex?</string>
    <string name="congrats">恭喜！已爲你制定個人健身計畫</string>
    <string name="instructions">Instructions</string>
    <string name="muscles_involved">Muscles Involved</string>
    <string name="abductors">abductors</string>
    <string name="abs">abs</string>
    <string name="adductors">adductors</string>
    <string name="biceps">biceps</string>
    <string name="delts">delts</string>
    <string name="calves">calves</string>
    <string name="no_workout_history">No workout history</string>
    <string name="start">Start</string>
</resources>